--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-02 20:27+0300\n"
+"POT-Creation-Date: 2023-02-20 22:59+0300\n"
 "PO-Revision-Date: 2023-02-09 18:15+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -299,6 +299,62 @@ msgstr " de oro"
 msgid "отклонить всё"
 msgstr "rechazar todo"
 
+#: party/templates/party/redesign/party_blocks/has_party.html:8
+#, fuzzy
+#| msgid "Партия"
+msgctxt "has_party"
+msgid "Партия"
+msgstr "Partido"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:126
+#, fuzzy
+#| msgid "Никнейм"
+msgctxt "has_party"
+msgid "Никнейм"
+msgstr "Apodo"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:127
+#, fuzzy
+#| msgctxt "profile"
+#| msgid "был в сети"
+msgctxt "has_party"
+msgid "Был в сети"
+msgstr "estaba en línea"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:128
+#, fuzzy
+#| msgctxt "storage_upgrade"
+#| msgid "Стоимость"
+msgctxt "has_party"
+msgid "Должность"
+msgstr "Precio"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:172
+#, fuzzy
+#| msgid "должность в партии"
+msgctxt "has_party"
+msgid "Покинуть партию?"
+msgstr "posición en el partido"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:173
+msgctxt "has_party"
+msgid "Вы покинете партию, а также все связанные должности. Продолжить?"
+msgstr ""
+
+#: party/templates/party/redesign/party_blocks/has_party.html:174
+#, fuzzy
+#| msgid "Продолжить"
+msgctxt "has_party"
+msgid "Продолжить"
+msgstr "Continuar"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:175
+#, fuzzy
+#| msgid "Отмена"
+msgctxt "has_party"
+msgid "Отмена"
+msgstr "Cancelar"
+
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
 msgstr "Primarias del partido"
@@ -311,68 +367,18 @@ msgstr "Partidos de la región"
 msgid "Партии мира"
 msgstr "Partidos del mundo"
 
-#: party/views/party.py:16 player/views/lists/cash_top.py:99
-#: player/views/lists/cash_top.py:100
-msgid "Партия"
-msgstr "Partido"
+#: party/views/management/staff/leave_party.py:33
+#: party/views/management/staff/leave_party.py:167
+#, fuzzy
+#| msgctxt "repost"
+#| msgid "Выйти из игры"
+msgctxt "party"
+msgid "Выход из партии"
+msgstr "Quitar"
 
-#: player/logs/cash_log.py:21
-msgctxt "cash_log"
-msgid "Финансирование"
-msgstr "Fondos Diarios"
-
-#: player/logs/cash_log.py:22
-msgctxt "cash_log"
-msgid "Майнинг"
-msgstr "Minado"
-
-#: player/logs/cash_log.py:23
-msgctxt "cash_log"
-msgid "Перелёт"
-msgstr "Volando"
-
-#: player/logs/cash_log.py:24
-msgctxt "cash_log"
-msgid "Новый Склад"
-msgstr "Nuevo almacén"
-
-#: player/logs/cash_log.py:25
-msgctxt "cash_log"
-msgid "Операции со Складом"
-msgstr "Operaciones con bienes "
-
-#: player/logs/cash_log.py:26
-msgctxt "cash_log"
-msgid "Передача товаров"
-msgstr "Transporte"
-
-#: player/logs/cash_log.py:27
-msgctxt "cash_log"
-msgid "Торговля"
-msgstr "Comercio"
-
-#: player/logs/cash_log.py:28
-msgctxt "cash_log"
-msgid "Гос. закупки"
-msgstr "Compra Pública"
-
-#: player/logs/cash_log.py:29
-msgctxt "cash_log"
-msgid "Навыки"
-msgstr "Habilidades"
-
-#: player/player.py:284 region/views/do_mining.py:31
-#: region/views/start_auto.py:26
-msgctxt "mining"
-msgid "Дождитесь конца полёта"
-msgstr ""
-
-#: player/player.py:285 player/player.py:307 region/views/retrieve_cash.py:40
-msgctxt "mining"
-msgid "Ошибка получения финансирования"
-msgstr "Error de financiación diaria"
-
-#: player/player.py:286 player/player.py:308 region/views/cancel_auto.py:34
+#: party/views/management/staff/leave_party.py:34
+#: party/views/management/staff/leave_party.py:168 player/player.py:286
+#: player/player.py:308 region/views/cancel_auto.py:34
 #: region/views/do_mining.py:33 region/views/do_mining.py:46
 #: region/views/do_mining.py:56 region/views/do_mining.py:69
 #: region/views/do_mining.py:78 region/views/do_mining.py:87
@@ -468,6 +474,77 @@ msgstr "Error de financiación diaria"
 msgctxt "mining"
 msgid "Закрыть"
 msgstr "Cerrar"
+
+#: party/views/management/staff/leave_party.py:35
+msgctxt "party"
+msgid "Вы не исключили всех однопартийцев"
+msgstr ""
+
+#: party/views/management/staff/leave_party.py:169
+msgctxt "party"
+msgid "Вы не состоите в указанной партии"
+msgstr ""
+
+#: party/views/party.py:24 player/views/lists/cash_top.py:99
+#: player/views/lists/cash_top.py:100
+msgid "Партия"
+msgstr "Partido"
+
+#: player/logs/cash_log.py:21
+msgctxt "cash_log"
+msgid "Финансирование"
+msgstr "Fondos Diarios"
+
+#: player/logs/cash_log.py:22
+msgctxt "cash_log"
+msgid "Майнинг"
+msgstr "Minado"
+
+#: player/logs/cash_log.py:23
+msgctxt "cash_log"
+msgid "Перелёт"
+msgstr "Volando"
+
+#: player/logs/cash_log.py:24
+msgctxt "cash_log"
+msgid "Новый Склад"
+msgstr "Nuevo almacén"
+
+#: player/logs/cash_log.py:25
+msgctxt "cash_log"
+msgid "Операции со Складом"
+msgstr "Operaciones con bienes "
+
+#: player/logs/cash_log.py:26
+msgctxt "cash_log"
+msgid "Передача товаров"
+msgstr "Transporte"
+
+#: player/logs/cash_log.py:27
+msgctxt "cash_log"
+msgid "Торговля"
+msgstr "Comercio"
+
+#: player/logs/cash_log.py:28
+msgctxt "cash_log"
+msgid "Гос. закупки"
+msgstr "Compra Pública"
+
+#: player/logs/cash_log.py:29
+msgctxt "cash_log"
+msgid "Навыки"
+msgstr "Habilidades"
+
+#: player/player.py:284 region/views/do_mining.py:31
+#: region/views/start_auto.py:26
+msgctxt "mining"
+msgid "Дождитесь конца полёта"
+msgstr ""
+
+#: player/player.py:285 player/player.py:307 region/views/retrieve_cash.py:40
+msgctxt "mining"
+msgid "Ошибка получения финансирования"
+msgstr "Error de financiación diaria"
 
 #: player/player.py:306
 msgctxt "mining"
@@ -1298,7 +1375,7 @@ msgstr "Nuevo personaje"
 msgid "Ошибка в форме профиля"
 msgstr "Error de formulario de perfil"
 
-#: player/views/overview.py:192
+#: player/views/overview.py:191
 msgid "Обзор"
 msgstr "Vista general"
 
@@ -1527,17 +1604,17 @@ msgid "Региональные налоги"
 msgstr ""
 
 #: region/templates/region/region_view.html:201
-#: state/templates/state/state_view.html:143
+#: state/templates/state/state_view.html:144
 msgid "На финансирование"
 msgstr ""
 
 #: region/templates/region/region_view.html:213
-#: state/templates/state/state_view.html:155
+#: state/templates/state/state_view.html:156
 msgid "На добычу"
 msgstr ""
 
 #: region/templates/region/region_view.html:227
-#: state/templates/state/state_view.html:169
+#: state/templates/state/state_view.html:170
 msgid "На торговлю"
 msgstr ""
 
@@ -1723,15 +1800,15 @@ msgctxt "goods"
 msgid "Орбитальные орудия"
 msgstr "Cañon orbital"
 
-#: state/templates/state/state_view.html:40
+#: state/templates/state/state_view.html:41
 msgid "Donate"
 msgstr ""
 
-#: state/templates/state/state_view.html:106
+#: state/templates/state/state_view.html:107
 msgid "Столица"
 msgstr ""
 
-#: state/templates/state/state_view.html:136
+#: state/templates/state/state_view.html:137
 msgid "Государственные налоги"
 msgstr ""
 
