--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-02 20:27+0300\n"
+"POT-Creation-Date: 2023-02-20 22:59+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -356,6 +356,62 @@ msgstr "Emas"
 msgid "отклонить всё"
 msgstr "menolak semuanya"
 
+#: party/templates/party/redesign/party_blocks/has_party.html:8
+#, fuzzy
+#| msgid "Партия"
+msgctxt "has_party"
+msgid "Партия"
+msgstr "Partai"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:126
+#, fuzzy
+#| msgid "Никнейм"
+msgctxt "has_party"
+msgid "Никнейм"
+msgstr "Nama"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:127
+#, fuzzy
+#| msgctxt "profile"
+#| msgid "был в сети"
+msgctxt "has_party"
+msgid "Был в сети"
+msgstr "telah aktif"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:128
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "стоимость"
+msgctxt "has_party"
+msgid "Должность"
+msgstr "harga"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:172
+#, fuzzy
+#| msgid "должность в партии"
+msgctxt "has_party"
+msgid "Покинуть партию?"
+msgstr "posisi dalam partai"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:173
+msgctxt "has_party"
+msgid "Вы покинете партию, а также все связанные должности. Продолжить?"
+msgstr ""
+
+#: party/templates/party/redesign/party_blocks/has_party.html:174
+#, fuzzy
+#| msgid "Продолжить"
+msgctxt "has_party"
+msgid "Продолжить"
+msgstr "Lanjutkan"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:175
+#, fuzzy
+#| msgid "Отмена"
+msgctxt "has_party"
+msgid "Отмена"
+msgstr "Batal"
+
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
 msgstr "pemilihan kandidat partai"
@@ -368,85 +424,18 @@ msgstr "Partai di wilayah"
 msgid "Партии мира"
 msgstr "Partai di dunia"
 
-#: party/views/party.py:16 player/views/lists/cash_top.py:99
-#: player/views/lists/cash_top.py:100
-msgid "Партия"
-msgstr "Partai"
-
-#: player/logs/cash_log.py:21
+#: party/views/management/staff/leave_party.py:33
+#: party/views/management/staff/leave_party.py:167
 #, fuzzy
-#| msgid "Финансирование"
-msgctxt "cash_log"
-msgid "Финансирование"
-msgstr "Keuangan"
+#| msgctxt "repost"
+#| msgid "Выйти из игры"
+msgctxt "party"
+msgid "Выход из партии"
+msgstr "Keluar"
 
-#: player/logs/cash_log.py:22
-msgctxt "cash_log"
-msgid "Майнинг"
-msgstr ""
-
-#: player/logs/cash_log.py:23
-msgctxt "cash_log"
-msgid "Перелёт"
-msgstr ""
-
-#: player/logs/cash_log.py:24
-#, fuzzy
-#| msgctxt "storage"
-#| msgid "Новый Склад"
-msgctxt "cash_log"
-msgid "Новый Склад"
-msgstr "Penyimpanan baru"
-
-#: player/logs/cash_log.py:25
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "Операции с товарами"
-msgctxt "cash_log"
-msgid "Операции со Складом"
-msgstr "Pengoperasian barang"
-
-#: player/logs/cash_log.py:26
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "Перемещение товаров"
-msgctxt "cash_log"
-msgid "Передача товаров"
-msgstr "Pemindahan penyimpanan"
-
-#: player/logs/cash_log.py:27
-#, fuzzy
-#| msgid "Торговля"
-msgctxt "cash_log"
-msgid "Торговля"
-msgstr "Perdagangan"
-
-#: player/logs/cash_log.py:28
-#, fuzzy
-#| msgid "Государство"
-msgctxt "cash_log"
-msgid "Гос. закупки"
-msgstr "Negara"
-
-#: player/logs/cash_log.py:29
-#, fuzzy
-#| msgid "Навыки"
-msgctxt "cash_log"
-msgid "Навыки"
-msgstr "Kemampuan"
-
-#: player/player.py:284 region/views/do_mining.py:31
-#: region/views/start_auto.py:26
-msgctxt "mining"
-msgid "Дождитесь конца полёта"
-msgstr ""
-
-#: player/player.py:285 player/player.py:307 region/views/retrieve_cash.py:40
-msgctxt "mining"
-msgid "Ошибка получения финансирования"
-msgstr "Pendanaan Harian Gagal"
-
-#: player/player.py:286 player/player.py:308 region/views/cancel_auto.py:34
+#: party/views/management/staff/leave_party.py:34
+#: party/views/management/staff/leave_party.py:168 player/player.py:286
+#: player/player.py:308 region/views/cancel_auto.py:34
 #: region/views/do_mining.py:33 region/views/do_mining.py:46
 #: region/views/do_mining.py:56 region/views/do_mining.py:69
 #: region/views/do_mining.py:78 region/views/do_mining.py:87
@@ -542,6 +531,94 @@ msgstr "Pendanaan Harian Gagal"
 msgctxt "mining"
 msgid "Закрыть"
 msgstr "Ditutup"
+
+#: party/views/management/staff/leave_party.py:35
+msgctxt "party"
+msgid "Вы не исключили всех однопартийцев"
+msgstr ""
+
+#: party/views/management/staff/leave_party.py:169
+msgctxt "party"
+msgid "Вы не состоите в указанной партии"
+msgstr ""
+
+#: party/views/party.py:24 player/views/lists/cash_top.py:99
+#: player/views/lists/cash_top.py:100
+msgid "Партия"
+msgstr "Partai"
+
+#: player/logs/cash_log.py:21
+#, fuzzy
+#| msgid "Финансирование"
+msgctxt "cash_log"
+msgid "Финансирование"
+msgstr "Keuangan"
+
+#: player/logs/cash_log.py:22
+msgctxt "cash_log"
+msgid "Майнинг"
+msgstr ""
+
+#: player/logs/cash_log.py:23
+msgctxt "cash_log"
+msgid "Перелёт"
+msgstr ""
+
+#: player/logs/cash_log.py:24
+#, fuzzy
+#| msgctxt "storage"
+#| msgid "Новый Склад"
+msgctxt "cash_log"
+msgid "Новый Склад"
+msgstr "Penyimpanan baru"
+
+#: player/logs/cash_log.py:25
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "Операции с товарами"
+msgctxt "cash_log"
+msgid "Операции со Складом"
+msgstr "Pengoperasian barang"
+
+#: player/logs/cash_log.py:26
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "Перемещение товаров"
+msgctxt "cash_log"
+msgid "Передача товаров"
+msgstr "Pemindahan penyimpanan"
+
+#: player/logs/cash_log.py:27
+#, fuzzy
+#| msgid "Торговля"
+msgctxt "cash_log"
+msgid "Торговля"
+msgstr "Perdagangan"
+
+#: player/logs/cash_log.py:28
+#, fuzzy
+#| msgid "Государство"
+msgctxt "cash_log"
+msgid "Гос. закупки"
+msgstr "Negara"
+
+#: player/logs/cash_log.py:29
+#, fuzzy
+#| msgid "Навыки"
+msgctxt "cash_log"
+msgid "Навыки"
+msgstr "Kemampuan"
+
+#: player/player.py:284 region/views/do_mining.py:31
+#: region/views/start_auto.py:26
+msgctxt "mining"
+msgid "Дождитесь конца полёта"
+msgstr ""
+
+#: player/player.py:285 player/player.py:307 region/views/retrieve_cash.py:40
+msgctxt "mining"
+msgid "Ошибка получения финансирования"
+msgstr "Pendanaan Harian Gagal"
 
 #: player/player.py:306
 msgctxt "mining"
@@ -1411,7 +1488,7 @@ msgstr "Karakter baru"
 msgid "Ошибка в форме профиля"
 msgstr "Pembuatan profil gagal"
 
-#: player/views/overview.py:192
+#: player/views/overview.py:191
 msgid "Обзор"
 msgstr "Beranda"
 
@@ -1645,17 +1722,17 @@ msgid "Региональные налоги"
 msgstr ""
 
 #: region/templates/region/region_view.html:201
-#: state/templates/state/state_view.html:143
+#: state/templates/state/state_view.html:144
 msgid "На финансирование"
 msgstr ""
 
 #: region/templates/region/region_view.html:213
-#: state/templates/state/state_view.html:155
+#: state/templates/state/state_view.html:156
 msgid "На добычу"
 msgstr ""
 
 #: region/templates/region/region_view.html:227
-#: state/templates/state/state_view.html:169
+#: state/templates/state/state_view.html:170
 msgid "На торговлю"
 msgstr ""
 
@@ -1844,15 +1921,15 @@ msgctxt "goods"
 msgid "Орбитальные орудия"
 msgstr "Meriam orbit"
 
-#: state/templates/state/state_view.html:40
+#: state/templates/state/state_view.html:41
 msgid "Donate"
 msgstr ""
 
-#: state/templates/state/state_view.html:106
+#: state/templates/state/state_view.html:107
 msgid "Столица"
 msgstr ""
 
-#: state/templates/state/state_view.html:136
+#: state/templates/state/state_view.html:137
 msgid "Государственные налоги"
 msgstr ""
 
