--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-02-02 20:27+0300\n"
-"PO-Revision-Date: 2023-01-08 23:19+0300\n"
+"POT-Creation-Date: 2023-02-20 22:59+0300\n"
+"PO-Revision-Date: 2023-02-20 13:20+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -60,9 +60,6 @@ msgid "no_common_borders"
 msgstr ""
 
 #: factory/models/factory/factory.py:29
-#, fuzzy
-#| msgctxt "storage"
-#| msgid "Уровень"
 msgctxt "factory"
 msgid "Уровень"
 msgstr "Level"
@@ -187,9 +184,6 @@ msgid "Производство"
 msgstr "Produktion"
 
 #: factory/views/produce_good.py:31
-#, fuzzy
-#| msgctxt "mining"
-#| msgid "Дождитесь конца полёта"
 msgctxt "factory"
 msgid "Дождитесь конца полёта"
 msgstr "Warten Sie bis zum Ende des Fluges"
@@ -200,12 +194,9 @@ msgstr "Warten Sie bis zum Ende des Fluges"
 #: factory/views/produce_good.py:106 factory/views/produce_good.py:116
 #: factory/views/produce_good.py:124 factory/views/produce_good.py:132
 #: factory/views/produce_good.py:170 factory/views/produce_good.py:189
-#, fuzzy
-#| msgctxt "menu"
-#| msgid "производство"
 msgctxt "factory"
 msgid "Ошибка производства"
-msgstr "Produktion"
+msgstr "Produktionsfehler"
 
 #: factory/views/produce_good.py:33 factory/views/produce_good.py:44
 #: factory/views/produce_good.py:60 factory/views/produce_good.py:72
@@ -213,141 +204,92 @@ msgstr "Produktion"
 #: factory/views/produce_good.py:107 factory/views/produce_good.py:117
 #: factory/views/produce_good.py:125 factory/views/produce_good.py:133
 #: factory/views/produce_good.py:171 factory/views/produce_good.py:190
-#, fuzzy
-#| msgid "Закрыть"
 msgctxt "storage"
 msgid "Закрыть"
 msgstr "Schließen"
 
 #: factory/views/produce_good.py:42
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "Склад не заполнен"
 msgctxt "factory"
 msgid "Склад не заполнен"
-msgstr "Lager ist nicht voll"
+msgstr "Lagerhaus nicht angegeben"
 
 #: factory/views/produce_good.py:58
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "Указанный Склад вам не принадлежит"
 msgctxt "factory"
 msgid "Указанный Склад вам не принадлежит"
-msgstr "Das betreffende Lagerhaus gehört Ihnen nicht"
+msgstr "Das angegebene Lager gehört nicht Ihnen"
 
 #: factory/views/produce_good.py:70
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Указанный товар не существует"
 msgctxt "factory"
 msgid "Указанный товар не существует"
-msgstr "Der betreffende Gegenstand existiert nicht"
+msgstr "Die angegebene Ware existiert nicht"
 
 #: factory/views/produce_good.py:84
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Количество - не число"
 msgctxt "factory"
 msgid "Номер схемы - не число"
-msgstr "Menge - nicht Anzahl"
+msgstr "Die Schemanummer ist keine Nummer"
 
 #: factory/views/produce_good.py:94
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Указанный товар не существует"
 msgctxt "factory"
 msgid "Указанной схемы не существует"
-msgstr "Der betreffende Gegenstand existiert nicht"
+msgstr "Angegebenes Schema existiert nicht"
 
 #: factory/views/produce_good.py:105
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Количество - не число"
 msgctxt "factory"
 msgid "Количество - не число"
-msgstr "Menge - nicht Anzahl"
+msgstr "Menge ist keine Nummer"
 
 #: factory/views/produce_good.py:115
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Количество товара должно быть положительным числом"
 msgctxt "factory"
 msgid "Количество товара должно быть положительным числом"
 msgstr "Die Warenmenge muss eine positive Zahl sein"
 
 #: factory/views/produce_good.py:123
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Количество товара слишком велико"
 msgctxt "factory"
 msgid "Количество товара слишком велико"
 msgstr "Die Menge der Waren ist zu groß"
 
 #: factory/views/produce_good.py:134
-#, fuzzy
-#| msgctxt "assets"
-#| msgid " недостаточно места для товара "
 msgctxt "factory"
 msgid "Недостаточно места на складе для товара. В наличии "
-msgstr "unzureichender Platz für die Ware"
+msgstr "Unzureichender Platz für Waren. Freier Platz "
 
 #: factory/views/produce_good.py:135 factory/views/produce_good.py:172
 #: factory/views/produce_good.py:192
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "Требуется: "
 msgctxt "factory"
 msgid ", требуется "
-msgstr "Erforderlich:"
+msgstr ", erforderlich "
 
 #: factory/views/produce_good.py:172
-#, fuzzy
-#| msgctxt "mining"
-#| msgid "Недостаточно энергии"
 msgctxt "factory"
 msgid "Недостаточно энергии. В наличии "
-msgstr "Nicht genug Energie"
+msgstr "Nicht genug Energie. Jetzt "
 
 #: factory/views/produce_good.py:191
-#, fuzzy
-#| msgctxt "mining"
-#| msgid "Недостаточно энергии"
 msgctxt "factory"
 msgid "Недостаточно "
-msgstr "Nicht genug Energie"
+msgstr "Nicht ausreichend"
 
 #: factory/views/produce_good.py:191
-#, fuzzy
-#| msgctxt "assets"
-#| msgid ", в наличии: "
 msgctxt "factory"
 msgid ". В наличии "
-msgstr "verfügbar:"
+msgstr ". Vorrätig "
 
 #: factory/views/produce_good.py:242
 msgctxt "factory"
 msgid "Внезапно!"
-msgstr ""
+msgstr "Plötzlich!"
 
 #: factory/views/produce_good.py:243
-#, fuzzy
-#| msgctxt "game_event"
-#| msgid "личный"
 msgctxt "factory"
 msgid "Отлично!"
-msgstr "persönlich"
+msgstr "Ausgezeichnet!"
 
 #: factory/views/produce_good.py:244
-#, fuzzy
-#| msgctxt "daily_header"
-#| msgid "получаем"
 msgctxt "factory"
 msgid "Вы получили "
-msgstr "abrufen"
+msgstr "Sie erhalten"
 
 #: factory/views/produce_good.py:244
-#, fuzzy
-#| msgid "Золото"
 msgctxt "factory"
 msgid " золота"
 msgstr "Gold"
@@ -356,6 +298,62 @@ msgstr "Gold"
 #: party/templates/party/party_requests.html:36
 msgid "отклонить всё"
 msgstr "alle ablehnen"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:8
+#, fuzzy
+#| msgid "Партия"
+msgctxt "has_party"
+msgid "Партия"
+msgstr "Partei"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:126
+#, fuzzy
+#| msgid "Никнейм"
+msgctxt "has_party"
+msgid "Никнейм"
+msgstr "Nickname"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:127
+#, fuzzy
+#| msgctxt "profile"
+#| msgid "был в сети"
+msgctxt "has_party"
+msgid "Был в сети"
+msgstr "Letzte Aktivität"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:128
+#, fuzzy
+#| msgctxt "storage_upgrade"
+#| msgid "Стоимость"
+msgctxt "has_party"
+msgid "Должность"
+msgstr "Kosten"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:172
+#, fuzzy
+#| msgid "должность в партии"
+msgctxt "has_party"
+msgid "Покинуть партию?"
+msgstr "Position in der Partei"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:173
+msgctxt "has_party"
+msgid "Вы покинете партию, а также все связанные должности. Продолжить?"
+msgstr ""
+
+#: party/templates/party/redesign/party_blocks/has_party.html:174
+#, fuzzy
+#| msgid "Продолжить"
+msgctxt "has_party"
+msgid "Продолжить"
+msgstr "weiter"
+
+#: party/templates/party/redesign/party_blocks/has_party.html:175
+#, fuzzy
+#| msgid "Отмена"
+msgctxt "has_party"
+msgid "Отмена"
+msgstr "abbrechen"
 
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
@@ -369,68 +367,18 @@ msgstr "Parteien in der Region"
 msgid "Партии мира"
 msgstr "Parteien in der Welt"
 
-#: party/views/party.py:16 player/views/lists/cash_top.py:99
-#: player/views/lists/cash_top.py:100
-msgid "Партия"
-msgstr "Partei"
+#: party/views/management/staff/leave_party.py:33
+#: party/views/management/staff/leave_party.py:167
+#, fuzzy
+#| msgctxt "repost"
+#| msgid "Выйти из игры"
+msgctxt "party"
+msgid "Выход из партии"
+msgstr "verlassen"
 
-#: player/logs/cash_log.py:21
-msgctxt "cash_log"
-msgid "Финансирование"
-msgstr "Finanzierung"
-
-#: player/logs/cash_log.py:22
-msgctxt "cash_log"
-msgid "Майнинг"
-msgstr "Bergbau"
-
-#: player/logs/cash_log.py:23
-msgctxt "cash_log"
-msgid "Перелёт"
-msgstr "Flug"
-
-#: player/logs/cash_log.py:24
-msgctxt "cash_log"
-msgid "Новый Склад"
-msgstr "Neues Lagerhaus"
-
-#: player/logs/cash_log.py:25
-msgctxt "cash_log"
-msgid "Операции со Складом"
-msgstr "Lagerbetrieb"
-
-#: player/logs/cash_log.py:26
-msgctxt "cash_log"
-msgid "Передача товаров"
-msgstr "Übertragung von Waren"
-
-#: player/logs/cash_log.py:27
-msgctxt "cash_log"
-msgid "Торговля"
-msgstr "Markt"
-
-#: player/logs/cash_log.py:28
-msgctxt "cash_log"
-msgid "Гос. закупки"
-msgstr "Öffentliche Aufträge"
-
-#: player/logs/cash_log.py:29
-msgctxt "cash_log"
-msgid "Навыки"
-msgstr "Fahigkeiten"
-
-#: player/player.py:284 region/views/do_mining.py:31
-#: region/views/start_auto.py:26
-msgctxt "mining"
-msgid "Дождитесь конца полёта"
-msgstr "Warten Sie bis zum Ende des Fluges"
-
-#: player/player.py:285 player/player.py:307 region/views/retrieve_cash.py:40
-msgctxt "mining"
-msgid "Ошибка получения финансирования"
-msgstr "Der Fehler, eine Finanzierung zu erhalten"
-
-#: player/player.py:286 player/player.py:308 region/views/cancel_auto.py:34
+#: party/views/management/staff/leave_party.py:34
+#: party/views/management/staff/leave_party.py:168 player/player.py:286
+#: player/player.py:308 region/views/cancel_auto.py:34
 #: region/views/do_mining.py:33 region/views/do_mining.py:46
 #: region/views/do_mining.py:56 region/views/do_mining.py:69
 #: region/views/do_mining.py:78 region/views/do_mining.py:87
@@ -526,6 +474,77 @@ msgstr "Der Fehler, eine Finanzierung zu erhalten"
 msgctxt "mining"
 msgid "Закрыть"
 msgstr "Schließen"
+
+#: party/views/management/staff/leave_party.py:35
+msgctxt "party"
+msgid "Вы не исключили всех однопартийцев"
+msgstr ""
+
+#: party/views/management/staff/leave_party.py:169
+msgctxt "party"
+msgid "Вы не состоите в указанной партии"
+msgstr ""
+
+#: party/views/party.py:24 player/views/lists/cash_top.py:99
+#: player/views/lists/cash_top.py:100
+msgid "Партия"
+msgstr "Partei"
+
+#: player/logs/cash_log.py:21
+msgctxt "cash_log"
+msgid "Финансирование"
+msgstr "Finanzierung"
+
+#: player/logs/cash_log.py:22
+msgctxt "cash_log"
+msgid "Майнинг"
+msgstr "Bergbau"
+
+#: player/logs/cash_log.py:23
+msgctxt "cash_log"
+msgid "Перелёт"
+msgstr "Flug"
+
+#: player/logs/cash_log.py:24
+msgctxt "cash_log"
+msgid "Новый Склад"
+msgstr "Neues Lagerhaus"
+
+#: player/logs/cash_log.py:25
+msgctxt "cash_log"
+msgid "Операции со Складом"
+msgstr "Lagerbetrieb"
+
+#: player/logs/cash_log.py:26
+msgctxt "cash_log"
+msgid "Передача товаров"
+msgstr "Übertragung von Waren"
+
+#: player/logs/cash_log.py:27
+msgctxt "cash_log"
+msgid "Торговля"
+msgstr "Markt"
+
+#: player/logs/cash_log.py:28
+msgctxt "cash_log"
+msgid "Гос. закупки"
+msgstr "Öffentliche Aufträge"
+
+#: player/logs/cash_log.py:29
+msgctxt "cash_log"
+msgid "Навыки"
+msgstr "Fahigkeiten"
+
+#: player/player.py:284 region/views/do_mining.py:31
+#: region/views/start_auto.py:26
+msgctxt "mining"
+msgid "Дождитесь конца полёта"
+msgstr "Warten Sie bis zum Ende des Fluges"
+
+#: player/player.py:285 player/player.py:307 region/views/retrieve_cash.py:40
+msgctxt "mining"
+msgid "Ошибка получения финансирования"
+msgstr "Der Fehler, eine Finanzierung zu erhalten"
 
 #: player/player.py:306
 msgctxt "mining"
@@ -1056,7 +1075,7 @@ msgstr "Ablaufdatum"
 #: player/templates/player/redesign/profile.html:180
 msgctxt "profile"
 msgid "не активен"
-msgstr "kein Premium aktiv"
+msgstr "Bitte Premium erneuern"
 
 #: player/templates/player/redesign/profile.html:185
 #: player/templates/player/redesign/view_profile.html:74
@@ -1184,42 +1203,32 @@ msgstr "seit"
 #: player/templatetags/redesign/skill_top/power_top.py:47
 #: player/views/lists/cash_top.py:73 player/views/lists/cash_top.py:74
 msgid "Место"
-msgstr ""
+msgstr "Rangliste"
 
 #: player/templatetags/redesign/skill_top/endurance_top.py:64
 #: player/templatetags/redesign/skill_top/endurance_top.py:65
-#, fuzzy
-#| msgctxt "overview"
-#| msgid "вын"
 msgid "Вын"
 msgstr "Ausd."
 
 #: player/templatetags/redesign/skill_top/endurance_top.py:71
-#, fuzzy
-#| msgid "Выносливость"
 msgctxt "skill_top"
 msgid "Топ по Выносливости"
-msgstr "Ausdauer"
+msgstr "Top in Ausdauer"
 
 #: player/templatetags/redesign/skill_top/knowledge_top.py:64
 #: player/templatetags/redesign/skill_top/knowledge_top.py:65
-#, fuzzy
-#| msgctxt "overview"
-#| msgid "инт"
 msgid "Инт"
 msgstr "Bld."
 
 #: player/templatetags/redesign/skill_top/knowledge_top.py:71
-#, fuzzy
-#| msgid "Интеллект"
 msgctxt "skill_top"
 msgid "Топ по Интеллекту"
-msgstr "Bildung"
+msgstr "Top in Bildung"
 
 #: player/templatetags/redesign/skill_top/power_top.py:71
 msgctxt "skill_top"
 msgid "Топ по Силе"
-msgstr ""
+msgstr "Top in Stärke"
 
 #: player/templatetags/redesign/wallet_cash.py:18
 #: player/templatetags/redesign/wallet_cash.py:19
@@ -1346,11 +1355,8 @@ msgid "Население региона"
 msgstr "Einwohner in der Region"
 
 #: player/views/lists/skill_top.py:21
-#, fuzzy
-#| msgctxt "profile"
-#| msgid "характеристики"
 msgid "Топ по характеристикам"
-msgstr "Fähigkeiten"
+msgstr "Top nach Fähigkeiten"
 
 #: player/views/lists/world_players.py:57
 msgid "Мировое население"
@@ -1368,7 +1374,7 @@ msgstr "Neuer Charakter"
 msgid "Ошибка в форме профиля"
 msgstr "Fehler im Profil"
 
-#: player/views/overview.py:192
+#: player/views/overview.py:191
 msgid "Обзор"
 msgstr "Startseite"
 
@@ -1525,15 +1531,11 @@ msgid "Качество руды"
 msgstr "Qualität der Erze"
 
 #: region/templates/region/redesign/region_info.html:65
-#, fuzzy
-#| msgid "Вы здесь"
 msgctxt "map"
 msgid "Вы здесь"
 msgstr "Du befinden dich hier"
 
 #: region/templates/region/redesign/region_info.html:71
-#, fuzzy
-#| msgid "Отправиться"
 msgctxt "map"
 msgid "отправиться"
 msgstr "Fliege nach"
@@ -1601,17 +1603,17 @@ msgid "Региональные налоги"
 msgstr "Steuern in der Region"
 
 #: region/templates/region/region_view.html:201
-#: state/templates/state/state_view.html:143
+#: state/templates/state/state_view.html:144
 msgid "На финансирование"
 msgstr "Steuern"
 
 #: region/templates/region/region_view.html:213
-#: state/templates/state/state_view.html:155
+#: state/templates/state/state_view.html:156
 msgid "На добычу"
 msgstr "Steuern auf Fabrikerzeugnisse"
 
 #: region/templates/region/region_view.html:227
-#: state/templates/state/state_view.html:169
+#: state/templates/state/state_view.html:170
 msgid "На торговлю"
 msgstr "Steuern auf den Verkauf"
 
@@ -1797,15 +1799,15 @@ msgctxt "goods"
 msgid "Орбитальные орудия"
 msgstr "Orbitalrakete"
 
-#: state/templates/state/state_view.html:40
+#: state/templates/state/state_view.html:41
 msgid "Donate"
 msgstr "Spenden"
 
-#: state/templates/state/state_view.html:106
+#: state/templates/state/state_view.html:107
 msgid "Столица"
 msgstr "Hauptstadt"
 
-#: state/templates/state/state_view.html:136
+#: state/templates/state/state_view.html:137
 msgid "Государственные налоги"
 msgstr "Staatliche Steuern"
 
@@ -1900,9 +1902,6 @@ msgid "Медикаменты - лимит"
 msgstr "Medikamente - Limit"
 
 #: storage/models/storage.py:178
-#, fuzzy
-#| msgctxt "goods"
-#| msgid "Бокситы - лимит"
 msgctxt "goods"
 msgid "Буры - лимит"
 msgstr "Bauxit - Limit"
