--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-20 22:59+0300\n"
-"PO-Revision-Date: 2023-02-20 23:59+0300\n"
+"PO-Revision-Date: 2023-02-21 00:21+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -527,7 +527,7 @@ msgstr "Warten Sie bis zum Ende des Fluges"
 #: player/player.py:285 player/player.py:307 region/views/retrieve_cash.py:40
 msgctxt "mining"
 msgid "Ошибка получения финансирования"
-msgstr "Der Fehler, eine Finanzierung zu erhalten"
+msgstr "Finanzierungsfehler"
 
 #: player/player.py:306
 msgctxt "mining"
@@ -1130,7 +1130,7 @@ msgstr "Energie automatisch auffüllen"
 #: player/templates/player/redesign/profile.html:431
 msgctxt "profile"
 msgid "Скрыть кнопку Wiki"
-msgstr ""
+msgstr "Wiki-Schaltfläche ausblenden"
 
 #: player/templates/player/redesign/profile.html:462
 msgctxt "profile"
@@ -2189,7 +2189,7 @@ msgstr "Lagerbestand"
 #: storage/templates/storage/redesign/assets.html:22
 msgctxt "assets"
 msgid "выбор действия"
-msgstr "Präsidentschaftswahlen"
+msgstr "auwählen"
 
 #: storage/templates/storage/redesign/assets.html:23
 msgctxt "assets"
